# MADS-Capstone-food-recommendation-system

./: LICENSE  Makefile  README.md  Recipe_Data_Cleaning.ipynb  Recipe_Data_Cleaning_v2.ipynb  Recipe_Data_Cleaning_v3_allrecipes.ipynb  Recipe_Data_Cleaning_v4_combined.ipynb  Reviews_Data_cleaning.ipynb  approved_ingredient_map.csv  auto_synonyms.csv  auto_synonyms_clean.csv  candidate_synonyms.csv  final_synonym_map.csv  ingredient_summary.csv  pyproject.toml  requirements.txt  reviews_cleaned_sample500.csv  threshold_evaluation_results.csv  threshold_evaluation_results_all_recipes.csv
dash_app/: app.py
dash_app/assets/: custom_style.css
dash_app/pages/: description_search.py  image_search.py  name_search.py  not_found_404.py
database/: connect.env  db_connect.py  table_setup.py
notebooks/: how_to_create_preferences.ipynb  test_notebook.ipynb
project_package/: __init__.py  config.py
project_package/dash_utilities/: dummy_data.py  filters.py  modals.py
project_package/data_collection/: __init__.py  example_dataset.py  utility.py
project_package/data_preprocessing/: __init__.py  example_features.py  utils.py
project_package/modeling/: example_predict.py  example_train.py
scripts/: bedrock_preprocess.py  bedrock_recipe_model_results.csv  bedrock_recipe_model_summary.csv  difficulty_scoring.py  model_comparisons.py  nutrition_classifier.py  review_sentiment.py
